# FEM_FractionalOrder

./: .gitignore  CMakeLists.txt  README.md
codes/: CMakeLists.txt
codes/one_d/: CMakeLists.txt  run_oned.sh
codes/one_d/src/: conv_main.cc  main.cc  pde_weights.h  space_discr.h  time_stepper.h
codes/two_d/mesh/: mesh.geo  square.geo.opt  square.msh
one_d/: CMakeLists.txt  run_oned.sh
one_d/src/: Q.h  conv_main.cc  galerkin_mat.cc  galerkin_mat.h  main.cc  params.h  pde_weights.h  routines.h  space_discr.h  time_stepper_new.h  wrapper.h
report/: appendix.tex  bibfile.bib  compile.sh  conclusion.tex  deriv.tex  impl.tex  intro.tex  main.aux  main.bbl  main.lof  main.lol  main.lot  main.out  main.tex  main.toc  res.tex
report/figures/: 3d.eps  kappa.eps
report/figures/pricing/: call.eps  call_modi.eps  call_modmod.eps  digital.eps  digital_modi.eps  digital_modmod.eps  put.eps  put_modi.eps  put_modmod.eps
report/figures/theta0/: l2.eps  linf.eps
report/figures/theta1/: l2.eps  linf.eps
report/figures/theta1o2/: l2.eps  linf.eps
report/figures/theta1o4/: l2.eps  linf.eps
report/figures/theta3o4/: l2.eps  linf.eps
two_d/codes/: CMakeLists.txt
two_d/codes/two_d/: CMakeLists.txt
two_d/codes/two_d/mesh/: mesh.geo.opt  mesh.msh
two_d/codes/two_d/src/: analytical_nonfrac.h  main.cc  my_io.h  params.h  pde_weights.h  space_discr.h  time_stepper.h
